fix(android): keep content sync compatible with minSdk 26